--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-WEBD221 D001 Spr19
+  <title>WEBD221 D001 Spr19</title>
 </head>
 <body>
 An aggregated site of ALL projects for WEBD221 D001 Spr19
