added student pages

--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <html>
 <head>
-WEBD221 D001 Spr19
+  <title>WEBD221 D001 Spr19</title>
 </head>
 <body>
 An aggregated site of ALL projects for WEBD221 D001 Spr19
+  
+<br/><a href="ChristopherIndex.html">Link to Christopher's Site</a>
+<br/><a href="AnthonyIndex.html">Link to Anthony's Site</a>
+<br/><a href="EricIndex.html">Link to Eric's Site</a>
+<br/><a href="ShawnIndex.html">Link to Shawn's Site</a>
+<br/><a href="JohnIndex.html">Link to John's Site</a>
+<br/><a href="DustinIndex.html">Link to Dustin's Site</a>
+<br/><a href="CarmenIndex.html">Link to Carmen's Site</a>
+<br/><a href="JasonIndex.html">Link to Jason's Site</a>
+<br/><a href="DeloresIndex.html">Link to Delores's Site</a>
+<br/><a href="AlbertoIndex.html">Link to Alberto's Site</a>
+<br/><a href="MatthewIndex.html">Link to Matthew's Site</a>
+<br/><a href="ChadIndex.html">Link to Chad's Site</a>
+  
 </body>
 </html>
